Fri Jul 04 22:12:32 BST 2003  Olly Betts <olly@survex.com>

	* bootstrap: add missing ';;' as case pattern delimiter

Thu Jul 03 23:34:50 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.0.

Thu Jul 03 23:33:05 BST 2003  Olly Betts <olly@survex.com>

	* omindex.cc: Abort parsing of document if it's excluded from
	  indexing; ignore anything outside of the first <body>...</body>,
	  if present.

Tue Jun 24 00:45:28 BST 2003  Olly Betts <olly@survex.com>

	* docs/overview.txt: Added note about hashing of long URL terms and
	  reworked structure a little.

Mon Jun 23 21:11:41 BST 2003  Olly Betts <olly@survex.com>

	* bootstrap: Check for Bison 1.875 which doesn't work with Xapian.

Mon Jun 23 16:52:47 BST 2003  Olly Betts <olly@survex.com>

	* omega.cc,omindex.cc,scriptindex.cc: Xapian::PostListIterator ->
	  Xapian::PostingIterator.

Thu Jun 19 20:02:00 BST 2003  Olly Betts <olly@survex.com>

	* symboltab.h: Convert hardspace to space.

Wed Jun 18 16:32:34 BST 2003  Olly Betts <olly@survex.com>

	* scriptindex.cc: Removed already disabled unique id hashing to docid
	  code.  Xapian doesn't support setting arbitrary docids - if it ever
	  does we can retrieve this code from CVS.

Wed Jun 18 16:28:33 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,indextext.cc,indextext.h,omindex.cc,scriptindex.cc:
	  Normalise accents in probabilistic terms.

Tue Jun 17 17:54:32 BST 2003  Olly Betts <olly@survex.com>

	* omindex.cc: Read output from pstotext and pdftotext via pipes rather
	  than temporary files to side-step the whole problem of secure
	  temporary file creation; Use pdfinfo to get the title and keywords
	  from when indexing a PDF; Safe filename escaping tweaked to not
	  escape common safe punctuation.

Tue Jun 17 17:50:00 BST 2003  Olly Betts <olly@survex.com>

	* htmlparse.cc,htmlparse.h: Moved initialisation of named_ents out of
	  header - it's not a sensible candidate for inlining.
