@@ -1,3 +1,7 @@
+Tue Jul 08 17:34:01 BST 2003  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Fixed compilation problem.
+
 Fri Jul 04 22:12:32 BST 2003  Olly Betts <olly@survex.com>
 
 	* bootstrap: add missing ';;' as case pattern delimiter
